--- a/src/components/faq/faq.module.css
+++ b/src/components/faq/faq.module.css
@@ -1,9 +1,22 @@
 .container {
-  margin-left: 10rem;
+  width: 100%;
+  margin-left: 0rem;
+  padding: 0 5rem;
+  @media screen and (min-width: 874px) {
+    margin-left: 10rem;
+    padding: 0rem;
+  }
 }
 
 .title {
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 2rem;
+}
+
+.question__wrapper {
+  width: 100%;
+  @media screen and (min-width: 874px) {
+    width: 32rem;
+  }
 }
